SERVER-63908 Allow stopping of index builds during initial sync

(cherry picked from commit 6b31c081a99aaf31402be98363b85647689070c9)